# Caps

./: CMakeLists.txt  README.md  build.sh  help.txt  main.c
include/: Caps.h  packet.h  packetForger.h  packetStream.h  segment.h  socketManager.h  streamBuilder.h
include/include/: packetInterpreter.h
src/: packet.c  packetForger.c  packetInterpreter.c  segment.c  socketManager.h  streamBuilder.c
